2009-05-21  Nicolas François  <nicolas.francois@centraliens.net>

	* man/faillog.5.xml: Split a long paragraph. Typo fixes.

2009-05-21  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gpasswd.1.xml: Minor updates.

2009-05-21  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gshadow.5.xml: Updated documentation.

2009-05-21  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml, man/userdel.8.xml, man/useradd.8.xml:
	Harmonize formatting of login.defs and default/useradd variables.
	Use an <option> tag.
	* man/usermod.8.xml: Added reference to gshadow(5).
	* man/login.defs.d/USERDEL_CMD.xml: Shorten the lines of the
	USERDEL_CMD example.

2009-05-21  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Use a boolean instead of 0.

2009-05-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: Fixed typos.

2009-05-20  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Next version will be 4.1.4.1.

2009-05-20  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml: Added notes regarding the ownership of
	files.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupmod.8.xml: Split the -g option description into smaller
	paragraphs.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/usermod.8.xml: Ownership of the mailbox is also changed with
	the -u option.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/useradd.8.xml: When no passwords are provided, the password
	is disabled, not the account.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/newusers.8.xml, man/chpasswd.8.xml, man/useradd.8.xml,
	man/groupadd.8.xml, man/usermod.8.xml, man/chgpasswd.8.xml,
	man/groupmod.8.xml: Added warning: passwords set with these tools
	may not respect the password policy.

2009-05-19  Nicolas François  <nicolas.francois@centraliens.net>
